[project]
name = "CV2XInteroperabilityTestingTool"
version = "0.1.0"
description = "Cellular Vehicle-to-Everything (C-V2X) Interoperability Testing Tool"
authors = [
    {name = "Davide Pesavento", email = "davide.pesavento@nist.gov"},
    {name = "Eugene Song", email = "eugene.song@nist.gov"},
]
dependencies = [
    "fabric>=3.2.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "NIST-Software"}


[tool.pdm]
distribution = false
